package com.pawns;

public abstract class Attack {
    private byte range;
    private byte magnitude;
    private AttackType type;



}
