package com.pawns;

public class Bite extends Attack{


    void doAttack() {

    }
}
